# cavity-superconductor-polaritons

./: .envrc  .gitignore  Brewfile  Brewfile.lock.json  CMakeLists.txt  Pipfile  README.adoc  dodo.py  meson.build  pyproject.toml  shell.nix  tasks.py  todo.md
doc/: Doxyfile.in  mainpage.md  meson.build
include/: bs.h  cavity.h  coupling.h  exceptions.h  function.h  integrate.h  meanfield.h  meson.build  min.h  optimize.h  polariton.h  roots.h  state.h  system.h  utils.h
python/doc/: Makefile
python/doc/source/: bs.rst  cavity.rst  conf.py  coupling.rst  index.rst  modes.rst  polariton.rst  state.rst  system.rst
python/doc/source/pymodules/: bardasis_schrieffer.materials.rst  bardasis_schrieffer.polariton.rst  bardasis_schrieffer.rst  bardasis_schrieffer.runner.rst  bardasis_schrieffer.units.rst  materials.rst  polariton.rst  units.rst
python/lib/: data.py  graphics.py  materials.py  polariton.py  units.py
python/lib/bardasis_schrieffer/: data.py  materials.py  plotting.py  polariton.py  units.py
python/lib/bardasis_schrieffer/runner/: cli.py  data.py  notify.py  params.py  ranges.py
python/lib/runner/: __init__.py  options.py  runner.py
python/scripts/: calculations.py  path_helper.py  run.py  session.py  start
src/: CMakeLists.txt  bindbs.cpp  bindcavity.cpp  bindcoupling.cpp  bindings.cpp  bindmeanfield.cpp  bindpolariton.cpp  bindstate.cpp  bindsystem.cpp  debug.cpp  meanfield.cpp  meson.build  optimize.cpp
subprojects/: rzmcmt.wrap
