[tool.poetry]
name = "bardasis_schrieffer"
version = "0.1.0"
description = "Code for handling bardasis_schrieffer polaritons"
authors = ["Zach Raines <code@zmraines.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
pybind11 = "^2.2"
numpy = "^1"
click = "^6"
pendulum = "^2"
pint = "^0.8"
dataclasses = {version="^0.6", python="~3.6"}
tqdm = "^4"
"pushbullet.py" = "0.11"
logbook = "^1.3"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
hypothesis = "^3.0"
hypothesis-pytest = "^0.19"
