[tool.poetry]
name = "bardasis_schrieffer"
version = "0.1.0"
description = "Code for handling bardasis_schrieffer polaritons"
authors = ["Zach Raines <code@zmraines.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pybind11 = "^2.2"
numpy = "^1.20"
click = "^8"
pendulum = "^2"
pint = "^0.20"
tqdm = "^4"
"pushbullet.py" = "0.11"
logbook = "^1.7"
